--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,27 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-// $primary: #66b032;
-// $secondary: #b2d732;
-// $accent: #347b98;
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap");
 
-// $dark: #092834;
-// $dark-page: #121212;
+// Set the default font-family
 
-// $positive: #F0F7D4;
-// $negative: #c10015;
-// $info: #31ccec;
-// $warning: #f2c037;
+$typography-font-family: "Ubuntu", sans-serif;
 
 $primary: #1b3860;
 $secondary: #e2d9cf;
 $accent: #b22222;
 $positive: #f7f2d4;
 $dark: #091d34;
-
-// $primary: #3f778d;
-// $secondary: #cd972d;
-// $accent: #b82214;
-// $positive: #ece2cc;
-// $dark: #091d34;
-// peach fuzz: 	#F87C56;
